--- a/src/styles.scss
+++ b/src/styles.scss
@@ -100,7 +100,12 @@ html {
 }
 
 .mobContainer {
-    background-color: rgb(0, 0, 0, 0.5);
+    background-color: rgb(0, 0, 0, .5);
     border-radius: 15px;
     min-width: 300px;
 }
+
+.mobContainer:hover {
+    background-color:rgb(0, 0, 0, .7)
+}
+
