--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
 html {
-    background-image: url('https://scontent-lax3-2.xx.fbcdn.net/v/t31.18172-8/14242423_1199161826772010_8426076087215177497_o.jpg?_nc_cat=103&ccb=1-5&_nc_sid=e3f864&_nc_ohc=J7o9VSn1UW0AX_3MVCn&_nc_ht=scontent-lax3-2.xx&oh=3a019e5f320aeaa63522e71e23234f4f&oe=61A60938');
+    background-image: url('https://wallpaperaccess.com/full/196477.jpg');
     background-size: cover;
 }
 
